typesafe_idb/tests/ui/read_only_txn_for_reaad_write_method.stderr
error[E0599]: the method `delete` exists for struct `ObjectStore<'_, Repository, ReadOnly>`, but its trait bounds were not satisfied
  --> tests/ui/read_only_txn_for_reaad_write_method.rs:47:22
   |
47 |         object_store.delete(&RepositoryId(4)).await.unwrap();
   |                      ^^^^^^ method cannot be called on `ObjectStore<'_, Repository, ReadOnly>` due to unsatisfied trait bounds
   |
  ::: src/txn.rs
   |
   | pub struct ReadOnly {}
   | ------------------- doesn't satisfy `<_ as TxnMode>::SupportsReadWrite = Present`
   |
   = note: the following trait bounds were not satisfied:
           `<typesafe_idb::ReadOnly as TxnMode>::SupportsReadWrite = Present`
